--- a/package.json
+++ b/package.json
@@ -2,19 +2,15 @@
   "name": "my-v0-project",
   "version": "0.1.0",
   "private": true,
-<<<<<<< HEAD
   "resolutions": {
     "date-fns": "^2.28.0"
   },
-=======
->>>>>>> 80076262c0a87bbec3f54c920193aa1b9c590d43
   "scripts": {
+    "clean": "node -e \"require('fs').rmSync('.next', { recursive: true, force: true })\"",
+    "dev": "next dev",
     "build": "next build",
     "export": "next export",
     "deploy": "npm run build && npm run export && gh-pages -d out"
-  },
-  "devDependencies": {
-    "gh-pages": "^5.0.0"
   },
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
