--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "clean": "node -e \"require('fs').rmSync('.next', { recursive: true, force: true })\"",
     "dev": "next dev",
     "build": "next build",
-    "export": "next export",
-    "deploy": "npm run build && npm run export && gh-pages -d out"
+    "build:github": "cross-env GITHUB_PAGES=true next build",
+    "build:docs": "cross-env GITHUB_PAGES=true next build && node -e \"const fs=require('fs'); if(fs.existsSync('docs')) fs.rmSync('docs', {recursive:true}); fs.cpSync('out', 'docs', {recursive:true}); fs.writeFileSync('docs/.nojekyll', '');\"",
+    "deploy": "npm run build:github && gh-pages -d out"
   },
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
@@ -69,6 +70,7 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "cross-env": "^10.0.0",
     "gh-pages": "^6.3.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
